--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+html,
+body {
+  height: 100%;
+}
+
 button:focus,
 input:focus {
   outline: none;
@@ -30,4 +35,13 @@ input[type="search"]::-webkit-search-cancel-button {
 input[type="search"]:focus::-webkit-search-cancel-button {
   opacity: 0.2;
   pointer-events: all;
+}
+
+a:link,
+a {
+  color: #1b95e0;
+}
+
+a:hover {
+  text-decoration: underline;
 }
